fixed Bazaar style